# birthday_service

./: README.md  pyproject.toml
app/birthday/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/birthday_app/: urls.py  views.py
app/templates/: base.html  header.html  subscription.html
app/users/: forms.py  models.py  tasks.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_rename_app_user_birthday.py  0003_alter_user_username.py
app/users/templates/users/: list.html  login.html  profile.html  registration.html
